# pronunciation-dict-creation

./: .gitignore  CHANGELOG.md  CITATION.cff  Pipfile  README.md  deploy.sh  playground.sh  pyproject.toml  setup.cfg
src/dict_from_dict/: __init__.py  argparse_helper.py  cli.py  core.py  from_lookup_dict.py  main.py
src/dict_from_dict_tests/core/: test_create_dict_from_dict.py  test_get_pronunciations.py
src/dict_from_dict_tests/test_main_py/: test_get_pronunciations.py
src/pronunciation_dict_creation/: argparse_helper.py  cli.py  common.py  downloading.py  from_lookup_dict.py  merging.py  pronunciations_remove_symbols.py  word2pronunciation.py  words_remove_symbols.py
